adds file descriptor leak tests; upgrades deps; migrates example cmd to cobra

--- a/.github/workflows/buildandtest.yaml
+++ b/.github/workflows/buildandtest.yaml
@@ -7,24 +7,20 @@ on:
 jobs:
 
   buildandtest:
-    name: Build and Test
+    name: Build and Test on Go ${{matrix.go}}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ['1.18', '1.17']
     steps:
-
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
+    - name: Set up Go ${{matrix.go}}
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.13
+        go-version: ${{matrix.go}}
       id: go
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: go get -v -t -d ./...
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+    - name: Test Go packages
+      run: go test -v -p 1 ./...
